Placing the entries between xml-like tags (this is not exactly an xml file, though).